[package]
name = "liqnft-market"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "liqnft_market"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.18.2"}
anchor-spl = {version = "0.18.2"}
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
strum_macros = "0.23.1"
spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
spl-token-metadata = {version="0.0.1", features = ["no-entrypoint"]}
metaplex-token-metadata = {version="0.0.1", features = ["no-entrypoint"]}
